--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "require": {
         "spatie/simple-excel": "^3.4",
         "symfony/var-dumper": "^7.0",
-        "tracy/tracy": "^2.10"
+        "tracy/tracy": "^2.10",
+        "carbon-cli/carbon-cli": "^1.3"
     },
     "scripts": {
         "serve": "php -S 0.0.0.0:8000 -t api",
