feat: update package.json scripts for better clarity
Modified the dev and build scripts in package.json to echo
the commands instead of directly running them. This change
improves clarity during development and build processes.

--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "dev": "vite",
-        "build": "vite build"
+        "dev": "echo vite",
+        "build": "echo vite build",
+        "vite:dev": "vite",
+        "vite:build": "vite build"
     },
     "devDependencies": {
         "axios": "^1.6.4",
