feat: add serverless support and update configurations
Added support for serverless deployment by introducing an
'ON_SERVERLESS' environment variable. Updated the filesystem
configuration to handle storage paths accordingly. Added a
new route for '/libs' and modified the Vercel configuration
to include necessary environment variables for serverless
operation.

No breaking changes.

--- a/vercel.json
+++ b/vercel.json
@@ -29,14 +29,17 @@
         "APP_DEBUG": "true",
         "APP_URL": "https://app-laravel-on-vercel.vercel.app",
         "VERCEL_DEMO_MODE": "true",
+        "ON_SERVERLESS": "true",
+        "CACHE_DRIVER": "array",
+        "LOG_CHANNEL": "stderr",
+        "SESSION_DRIVER": "array",
+        "FILESYSTEM_DISK": "serverless_public",
+        "LARAVEL_STORAGE_PATH": "/tmp/storage",
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
         "APP_PACKAGES_CACHE": "/tmp/packages.php",
         "APP_ROUTES_CACHE": "/tmp/routes.php",
         "APP_SERVICES_CACHE": "/tmp/services.php",
-        "CACHE_DRIVER": "array",
-        "LOG_CHANNEL": "stderr",
-        "SESSION_DRIVER": "array",
         "VIEW_COMPILED_PATH": "/tmp/views",
         "SSR_TEMP_PATH": "/tmp/ssr",
         "NODE_PATH": "node"
