feat: implement wallet management API
Added WalletController to handle wallet operations including
indexing, storing, showing, updating, archiving, and unarchiving
wallets. Introduced WalletService for business logic related to
wallets. Created necessary request validation classes for
storing and updating wallets.

Also added ClientResource, WalletResource, and other resource
classes for API responses. Implemented policies for client,
invoice, timer, and user management to enforce authorization.

Created migrations to add client_id to users and updated
tests for authentication and wallet management.

No breaking changes.

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,19 @@ vendor
 
 # Vercel
 .vercel
+
+*.md
+!*README*.md
+!*GUIDELINE*.md
+!*DOCUMENTATION*.md
+!*QUICKSTART*.md
+*no*commit*
+*No*Commit*
+*NO*COMMIT*
+*.bkp.*
+*.bkp
+*.log
+*.swp
+*.out
+*.zip
+_ide_helper*
