refactor: change is_archived to archived_at in Wallet model
Updated the Wallet model to replace the is_archived boolean property
with an archived_at timestamp. This change allows for better handling
of archived wallets by using a nullable timestamp instead of a boolean
flag. The is_archived attribute is now derived from the presence of
archived_at, improving clarity and consistency in the model.

Updated related factory and migration files to reflect this change.

No breaking changes.

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ vendor
 *.md
 !*README*.md
 !*GUIDELINE*.md
+!*API_*.md
 !*DOCUMENTATION*.md
 !*QUICKSTART*.md
 *no*commit*
@@ -46,5 +47,6 @@ vendor
 *.log
 *.swp
 *.out
+*.bak
 *.zip
 _ide_helper*
